--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -278,7 +278,7 @@
 
         "aigisMod:MeteorTactics": {
                 "NAME": "天落岩の計",
-                "DESCRIPTIONS": ["流星オーブが全ての敵を攻撃する。"]
+                "DESCRIPTIONS": ["流星オーブのダメージは #b", " 上昇する。 流星オーブが全ての敵を攻撃する。"]
         },
 
         "aigisMod:MultiPlosion": {
@@ -338,7 +338,7 @@
 
         "aigisMod:SpiritBoost": {
                 "NAME": "スピリットブースト",
-                "DESCRIPTIONS": ["ターン開始時、手札の #yアタック カードのコストをこのターン #b", " 減少する。 #yアタック を #yプレイ した時、 #y全て の #yエナジー を消費する。"]
+                "DESCRIPTIONS": ["#yアタック を #yプレイ した時、 #y全て の #yエナジー を消費する。"]
         },
 
         "aigisMod:AnnihilationProgram": {
