--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -38,8 +38,8 @@
       "暗黑骑士"
     ],
     "TEXT": [
-      "一名化身为活铠甲的勇士受星之声的指引来到这座尖塔。 NL 也许在此能有重大发现。",
-      "你准备使用你的特殊科技对抗心脏。",
+      "被星辰的声音所引导的成为活铠甲的战士。 NL 通过高塔，他有了重大的发现。",
+      "你将用特殊的技术攻击心脏。",
       "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~骑士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   }
