--- a/localization/zhs/AigisMod-Orb-Strings.json
+++ b/localization/zhs/AigisMod-Orb-Strings.json
@@ -2,9 +2,10 @@
   "aigisMod:MeteorOrb": {
     "NAME": "流星充能球",
     "DESCRIPTION": [
-      " #y被动 ：每当你打出 #y流星 牌，此充能球的伤害提高其费用点，然后对随机敌人造成 #b",
+      " #y被动： 当你打出一张 #y流星 牌时， 根据其耗能提升此充能球的伤害。",
+      " 在你的回合结束时，对一名随机敌人造成 #b",
       " 点伤害。",
-      " NL #y激发 ：对随机敌人造成 #b",
+      " NL #y激发: 对一名随机敌人造成 #b",
       " 点伤害。"
     ]
   }
