--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -279,42 +279,42 @@
 
   "SumireAction": {
     "TEXT": [
-      "选择一张牌加入手牌。",
-      "我的抽牌堆没有流星牌或东国牌..."
+      "选择一张牌加入到你的手牌中。",
+      "我的抽牌堆中没有流星牌或东国牌..."
     ]
   },
 
   "NielAction": {
     "TEXT": [
-      "选择一张牌放回手牌。",
-      "我的弃牌堆没有耗能不高于1的攻击牌..."
+      "选择一张耗能为1或更低的牌加入到你的手牌中。",
+      "我的弃牌堆中没有耗能为1或更低的牌..."
     ]
   },
 
   "ErunAction": {
     "TEXT": [
-      "选择一张牌加入手牌。",
-      "我的抽牌堆没有释能牌..."
+      "选择一张牌加入到你的手牌中。",
+      "我的抽牌堆中没有解放牌..."
     ]
   },
 
   "NephtyAction": {
     "TEXT": [
-      "减少在本回合中的耗能"
+      "减少其本回合的耗能。"
     ]
   },
 
   "VivianAction": {
     "TEXT": [
-      "减少在本场战斗中的耗能"
+      "减少其本场战斗的耗能"
     ]
   },
 
   "AngelMaidAction": {
     "TEXT": [
-      "选择一张牌加入手牌。",
-      "选择加入手牌。",
-      "我的抽牌堆没有释能牌..."
+      "选择一张牌加入到你的手牌中。",
+      "选择牌加入到你的手牌中",
+      "我的抽牌堆中没有解放牌..."
     ]
   }
 }
