--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -20,7 +20,7 @@
   "aigisMod:AigisShrine": {
     "NAME": "埃癸斯神殿",
     "DESCRIPTIONS": [
-      "你路过了一座熟悉的神殿。 NL 这里是女神埃癸斯的圣所。 NL 你可以选择接受一项女神的祝福。",
+      "你碰见一座熟悉的神殿。 NL 这里是女神埃癸斯的圣所。 NL 你可以从女神那里接受一项祝福。",
       "你离开了神殿，继续你的旅途。"
     ],
     "OPTIONS": [
@@ -28,9 +28,9 @@
       "[祈祷] #g升级一张牌。 ",
       "[召唤] #g从 #b20 #g张牌中选择 #b1 #g张加入牌组。 ",
       "[离开]",
-      "选择一张牌加入牌组",
+      "选择一张牌加入你的牌组",
       "[锁定] 没有足够金币（100）。",
-      "[锁定] 没有可升级的牌。",
+      "[锁定] 你没有可以升级的牌。",
       "选择一张牌升级"
     ]
   },
@@ -38,13 +38,13 @@
   "aigisMod:MilitaryExercise": {
     "NAME": "军队训练",
     "DESCRIPTIONS": [
-      "皇帝一行来到了王国军队的集结点。 NL 在继续探险之前你可以花一点时间强化你的军队。",
+      "帝国到达了与王国军会面的集合点。 NL 因为距离远征继续还有一段时间，你决定在此期间强化你的军队。",
       "你决定重新编排你的军队。",
       "你决定训练你的军队。",
-      "战斗后，你觉醒了一种新能力。"
+      "你在战斗后觉醒了新的能力。"
     ],
     "OPTIONS": [
-      "[重组] #g选择一张牌加入牌组。 ",
+      "[重组] #g将一张牌加入牌组。 ",
       "[训练] #g升级一张牌。 ",
       "[战斗] #g挑战 #r王子 。 ",
       "[离开]",
@@ -56,11 +56,11 @@
 
 
   "aigisMod:CursedGem": {
-    "NAME": "诅咒宝石",
+    "NAME": "被诅咒的宝石",
     "DESCRIPTIONS": [
-      "你面前躺着一具尸体，它的手中攥着一颗宝石。 NL 同时旁边还有一个镀金材质的宝箱。你察觉到宝石中蕴含着能量，但宝箱也同样诱人。",
-      "当你拿着宝石，你意识到它的能量来自于一种被诅咒的邪教仪式。你有责任妥善保管，这样力量就能为你所用。",
-      "不出所料，果然是一只怪物。"
+      "你面前躺着一具尸体，他手中拿着神秘的宝石。 NL 你在这个房间里还看到了一个镀金的宝箱。 你感觉到宝石中有能量传来，但宝箱也同样令人在意。",
+      "当你拿起宝石时，你立刻意识到这颗宝石来自被诅咒的异教徒。你有责任妥善保管它，但它的力量也同样能助你一臂之力。",
+      "不出意料，这是一只魔物。"
     ],
     "OPTIONS": [
       "[搜寻] #g检查一下 #r黄金宝箱？ ",
@@ -72,13 +72,13 @@
   "aigisMod:TheVoice": {
     "NAME": "声音",
     "DESCRIPTIONS": [
-      "当你跟随导航穿过楼层时，突然你失去了感官，然后逐渐听见了一种声音...",
-      "不知为何你受到了启发，变得更强了。",
-      "你感到有一股熟悉的力量回来了。",
-      "你应该更小心些。"
+      "在穿过楼层时你突然失去了意识，并且渐渐地听到了一种声音...",
+      "出于某些原因，你受到了鼓舞，并感觉自己变得更强大了。",
+      "你在自己的体内感觉到了熟悉的力量。",
+      "你应该更警觉的。"
     ],
     "OPTIONS": [
-      "[星星?] #g获得8点最大生命值。 ",
+      "[星星?] #g最大生命+8。 ",
       "[指挥官?] #g获得一个遗物。 ",
       "[醒来] 离开。 "
     ]
