--- a/localization/zhs/AigisMod-Relic-Strings.json
+++ b/localization/zhs/AigisMod-Relic-Strings.json
@@ -237,9 +237,9 @@
   },
   "aigisMod:EmperorAwakening": {
     "NAME": "皇帝觉醒",
-    "FLAVOR": "白之皇帝:不，我选择了帝国，就等于选择了永远的胜利。",
+    "FLAVOR": "白之皇帝： 不，生活在帝国就意味着不断地取胜。",
     "DESCRIPTIONS": [
-      "在 #y精英 和 #yBoss 战开始时，获得 #b3 #y力量 和 #b3 #y敏捷 。"
+      "在与 #y精英 和 #yBoss 战斗时，获得 #b3 点 #y力量 和 #b3 点 #y敏捷 。"
     ]
   },
   "aigisMod:CallHelp": {
@@ -345,8 +345,8 @@
     ]
   },
   "aigisMod:BastetGem": {
-    "NAME": "巴斯特宝石",
-    "FLAVOR": "萨瓦尔: '诅咒的宝石'，它会大幅强化持有者的能力，但作为代价，其灵魂会被不断吞噬。",
+    "NAME": "芭丝特的宝石",
+    "FLAVOR": "莎瓦：『被诅咒的宝石』以持续吞噬着使用者的灵魂为代价，给予他们巨大的力量。",
     "DESCRIPTIONS": [
       "当你 #y消耗 #y诅咒 时，获得 #b1 点 #y力量 。每场战斗限 #b3 次。"
     ]
@@ -357,58 +357,58 @@
 
 
   "aigisMod:ArmoredDecius": {
-    "NAME": "装甲德西乌斯",
-    "FLAVOR": "流星：德西乌斯是个卑鄙的人，为了胜利不择手段！",
+    "NAME": "强化铠甲德西乌斯",
+    "FLAVOR": "米蒂尔： 德西乌斯是为了胜利不择手段的卑劣的男人!",
     "DESCRIPTIONS": [
-      "每场战斗的前 #b4 回合结束时，获得 #b5 #y格挡 。",
-      " 每幕限一次，当你在战斗中生命值降为 #b0 时，免死并回复 #b25 生命。"
+      "在前 #b4 回合结束时， 获得 #b5 点 #y格挡 。",
+      " 每幕限一次，当你在战斗中 生命 为 #b0 时，回复 #b25 点生命。"
     ]
   },
   "aigisMod:MaouDecius": {
-    "NAME": "魔王机甲德西乌斯",
-    "FLAVOR": "德西乌斯：啊，我听见了星星的声音。多么美妙的旋律...",
+    "NAME": "魔王军铠甲德西乌斯",
+    "FLAVOR": "德西乌斯： 呜呼，总算能听到星星的声音了。是何等美丽的音调啊...",
     "DESCRIPTIONS": [
-      "替换装甲德西乌斯。将一张魔王机甲形态加入牌组。",
-      " 每幕限一次，当你在战斗中生命值降为 #b0 时，免死并回复 #b35 生命。"
+      "替换 #r强化铠甲德西乌斯 。 将一张魔王军铠甲模式加入到牌组中。",
+      " 每幕限一次，当你在战斗中 生命 为 #b0 时，回复 #b35 点生命。"
     ]
   },
   "aigisMod:MeteorSword": {
     "NAME": "奥义 天招流星剑",
     "FLAVOR": "德西乌斯：这就是奥义吗...!? 竟然让流星坠落下来，太卑鄙了....",
     "DESCRIPTIONS": [
-      "战斗开始时，生成 #b1 个 #b6 点伤害的 #y流星 。",
-      " 由牌 #y生成 #y流星 时的伤害增加 #b1 点。"
+      "每场战斗开始时，生成 #b1 颗造成 #b6 点伤害的 #y流星 。",
+      " 当一张卡 #y生成流星 时，它额外造成 #b1 点伤害。"
     ]
   },
   "aigisMod:KnightProtection": {
     "NAME": "圣骑士的守护",
     "FLAVOR": "柯奈莉雅：即使这份力量是魔之力，我该做的事情也没有任何变化。",
     "DESCRIPTIONS": [
-      "每回合第一打出攻击牌时获得 #b3 #y格挡 。",
-      " 每场战斗第一次打出 #y暗黑斗士 牌获得 #b1 层 #y缓冲 。"
+      "每回合第一次打出攻击牌时， 获得 #b3 点 #y格挡 。",
+      " 每场战斗第一次打出 #y暗黑斗士 牌时，获得 #b1 层 #y缓冲 。"
     ]
   },
   "aigisMod:ShieldBless": {
     "NAME": "盾之祝福",
     "FLAVOR": "海欧斯：即使是堕入黑暗的剑，也依旧能守护光明。",
     "DESCRIPTIONS": [
-      "打出 #y暗黑斗士 时获得 #b1 层 #y荆棘 。",
-      " 当你的 #y生命值 低于 #b50% 时，获得 #b2 #y敏捷 。"
+      "当你打出一张 #y暗黑斗士 牌时，获得 #b1 层 #y荆棘 。",
+      " 当你的 #y生命 低于 #b50% 时, 获得 #b2 点 #y敏捷 。"
     ]
   },
   "aigisMod:SuperMeteor": {
     "NAME": "超天落岩之计",
     "FLAVOR": "爱莎：我不像军师吗？",
     "DESCRIPTIONS": [
-      "每回合一次当你打出 #y流星 牌时获得 [E] 。"
+      "一回合一次，当你打出 #y流星 牌时获得 [E] 。"
     ]
   },
   "aigisMod:BlastingEnhancement": {
     "NAME": "爆裂强化的秘术",
-    "FLAVOR": "伽兰雅：掌握魔力的精髓，这就是我的使命",
+    "FLAVOR": "伽兰雅：掌握魔力的精髓，这就是我的使命。",
     "DESCRIPTIONS": [
-      "战斗开始时，如果敌人数量大于 #b1 个， #y生成 #b1 个 #y流星 。",
-      " 每当战斗中出现新敌人， #y生成 #b1 个 #y流星 。"
+      "每场战斗开始时，如果敌人数量多于 #b1 名， #y生成 #b1  颗 #y流星 。",
+      " 当敌人在战斗中出现时， #y生成 #b1  颗 #y流星 。"
     ]
   },
   "aigisMod:BlastingBall": {
@@ -419,32 +419,32 @@
     ]
   },
   "aigisMod:SealRelease": {
-    "NAME": "圣印解放",
-    "FLAVOR": "克罗耶：即使是堕天使也有需要保护的东西。",
+    "NAME": "神魔封印解除",
+    "FLAVOR": "克洛伊： 堕天使也有想守护的东西。",
     "DESCRIPTIONS": [
       "每场战斗开始时获得 #b2 层 #y残影 。"
     ]
   },
   "aigisMod:IndomitableTraitor": {
-    "NAME": "不屈的背叛者",
-    "FLAVOR": "沙迪亚: 你们人类啊，过了几千年还是这么愚蠢。",
+    "NAME": "不屈的叛逆者",
+    "FLAVOR": "夏提雅： 看来千年也不足以改变人类的愚蠢和温柔呢。",
     "DESCRIPTIONS": [
-      "第 #b5 回合结束时，如果你没有失去过 #y生命 ，对所有敌人造成 #b50 伤害。"
+      "在第五 #b5 回合结束时， 如果你没有受到过 #y生命 伤害, 对所有敌人造成 #b50 点伤害。"
     ]
   },
   "aigisMod:HolyAura": {
-    "NAME": "神圣光环",
-    "FLAVOR": "尤里娜：不敢相信我仍然还有人类的感觉...",
+    "NAME": "神圣波动",
+    "FLAVOR": "尤莉娜： 没想到我还留有人类的感情...",
     "DESCRIPTIONS": [
-      " #y暗黑斗士 获得保留。",
-      " 第 #b4 回合结束时, 获得 #b10 #y格挡 。"
+      "#y暗黑斗士 获得 保留 。",
+      " 在你的第 #b4 回合结束时，获得 #b10 点 #y格挡 。"
     ]
   },
   "aigisMod:HotSands": {
-    "NAME": "热砂战术",
-    "FLAVOR": "奈芙提：让我们来带领你们走出沙漠。来吧，随风而行。",
+    "NAME": "热砂连携战术",
+    "FLAVOR": "娜芙蒂： 沙漠里带路就交给我吧。 来吧，让我们与风一同前行。",
     "DESCRIPTIONS": [
-      "每当你攻击 #y精英 或 #yBoss 时，获得 #b2 格挡 。"
+      "当你攻击一名 #y精英 或 #yBoss 敌人，获得 #b2 点格挡。"
     ]
   },
 
